# bki-rag-chatbot

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  test_calc.py
eval/: golden_set.yaml  holdout_set.yaml  holdout_set_v2.yaml  holdout_set_v3.yaml  holdout_set_v4.yaml  holdout_set_v5.yaml  holdout_set_v6.yaml  holdout_set_v6r.yaml  run_eval.py
scripts/: build28_db_repair.py  ingest.py  setup_check.py  test_phase3.py  test_phase5a.py  test_retrieval.py
sql/: 001_init.sql  002_match_chunks.sql  003_seed_formulas.sql  004_lookup_rules.sql  005_lookup_rules_length_L.sql  006_lookup_rules_depth_ratio.sql  007_lookup_rules_mvz.sql  008_lookup_rules_bilingual.sql  009_lookup_rules_id_bodies.sql  010_lookup_rules_fire_door_hinged.sql  011_lookup_rules_probability_factor.sql  012_lookup_rules_material_factor_k.sql  013_lookup_rules_modulus_of_elasticity.sql  014_lookup_rules_sea_water_density.sql  015_lookup_rules_aluminium_modulus.sql  016_lookup_rules_outfit_misc.sql  017_lookup_rules_anchor_deck.sql  018_lookup_rules_gap_topics.sql  019_lookup_rules_stabilization.sql  020_lookup_rules_hatch_coverage.sql  021_lookup_rules_definitions.sql  022_lookup_rules_anchor_mass.sql  023_query_condense_cache.sql  024_lookup_rules_rudder_fatigue.sql  025_fix_chunk_1208_table_no.sql  026_reembed_chunk_1208.sql  027_lookup_rules_towing_winch.sql  027_rollback.sql  028_add_shell_plating_formulas.sql  028_add_shell_plating_formulas_rollback.sql
src/: __init__.py
tests/: __init__.py  test_calc.py  test_chain_lookup.py  test_cli_format.py  test_condense_cache.py  (+11 more)
(+50 files in other folders)
